# labctl

./: README.md  pyproject.toml
.github/workflows/: package-win-x64.yml
demo/: create_labctl.ipynb  mw_pulse_timesweep.ipynb  oes_timesweep.ipynb
demo/polarisation/: polarisation_calibration.ipynb
demo_private/: example.ipynb
experiments/camera_timesweep/: analysis_camera_timesweep.ipynb  analysis_camera_timesweep.py  labctl_camera_timesweep.py
experiments/polarisation/: labctl_polarisation.py
experiments/polarisation_calibration/: analysis_polarisation_calibration.ipynb  labctl_polarisation_calibration.ipynb
src/labctl-ui/: .gitignore  README.md  labctl.py  labctl3_MDR.py  labctl_ui.py  minimale_widget_st_multi.py  minimale_widget_stepper_multi.ui  package-lock.json  package.json  svelte.config.js
src/labctl-ui-qt/: README.md  labctl.py  labctl.ui  labctl_ui.py
src/labctl-ui/electron/: main.js  preload.js
src/labctl-ui/src/: app.css  app.d.ts
src/labctl/analysis/: __init__.py  analyse_camera_timesweep.py  analyse_polarization_calibration.py  get_data.py
src/labctl/devices/: __init__.py  base.py  bnc_pdg.py  impl.py  pi_translation_stage.py  thorlabs_stages.py
src/labctl/experiments/: __init__.py  base.py  base_camera_experiment.py  base_camera_laser_experiment.py  camera.py  camera_timesweep.py  create_labctl.ipynb  experiment.py  experiment_2d_imaging.py  experiment_laser_simple.py  polarisation.py  (+16 more)
tests/analyse/: test_get_data.py
tests/annotations/: test_annotations_experiments.py
tests/experiments/: test_background_configuration.py  test_experiment_constructor_validation.py  test_make_postprocessing_info.py  test_make_scripts.py  test_postprocessing_indices_invariants.py
(+20 files in other folders)
