[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labctl"
version = '0.0.1'
requires-python = ">=3.8"
dependencies = [
    "numpy", "scipy", "pickle", "pathlib"
]

authors = [
    {name = "Martijn Ruijzendaal", email = "martijn.ruijzendaal@gmail.com"}
]

[project.urls]
repository = "https://github.com/Brightsite-Plasmalab"

#[tool.setuptools.package-dir]
#labctl = "src/labctl"
#labctlui = "src/labctl-ui"