[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labctl"
version = '0.0.2'
requires-python = ">=3.10"
dependencies = [
    "numpy", "scipy", "typing-extensions"
]

authors = [
    {name = "Martijn Ruijzendaal", email = "martijn.ruijzendaal@gmail.com"},
    {name = "Thijs Drost", email = "thijs.drost@maastrichtuniversity.nl"}
]

[project.urls]
repository = "https://github.com/Brightsite-Plasmalab"

#[tool.setuptools.package-dir]
#labctl = "src/labctl"
#labctlui = "src/labctl-ui"